@@ -22,6 +22,7 @@ https://github.com/elastic/apm-agent-python/compare/v1.0.0\...master[Check the H
  * added `transaction_max_spans` setting to limit the amount of spans that are recorded per transaction ({pull}127[#127])
  * added configuration options to limit captured local variables to a certain length ({pull}130[#130])
  * added options for configuring the amount of context lines that are captured with each frame ({pull}136[#136])
+ * added support for tracing queries formatted as http://initd.org/psycopg/docs/sql.html[`psycopg2.sql.SQL`] objects ({pull}148[#148])
  * switched to `time.perf_counter` as timing function on Python 3 ({pull}138[#138])
  * BREAKING: Several settings and APIs have been renamed ({pull}111[#111], {pull}119[#119], {pull}143[#143]):
  ** The decorator for custom instrumentation, `elasticapm.trace`, is now `elasticapm.capture_span`
